// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`shebang.js format[babel]} 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
#!/usr/bin/env node
function a() {}

=====================================output=====================================
#!/usr/bin/env node
function a() {}

================================================================================
`;

exports[`shebang-newline.js format[babel]} 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
#!/usr/bin/env node

function a() {}

=====================================output=====================================
#!/usr/bin/env node

function a() {}

================================================================================
`;

exports[`snippet: Empty file with shebang format[babel]} 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
#!/usr/bin/env node
=====================================output=====================================
#!/usr/bin/env node

================================================================================
`;

exports[`snippet: Empty file with shebang format[babel]} 2`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
#!/usr/bin/env node

=====================================output=====================================
#!/usr/bin/env node

================================================================================
`;
